--- a/indeks.html
+++ b/indeks.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register</title>
-        <link rel="stylesheet" href="style.css">
+    <title>FShop</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&family=Roboto:wght@500;700&display=swap"
+        rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 </head>
+
 <body>
-    <center>
+    <div class="container">
         <header id="navbar">
             <nav class="navbar-container container">
                 <a href="/" class="home-link">
@@ -31,17 +38,16 @@
             </nav>
         </header>
         <main>
-            <div class="form-login">
-                <h3>daftar</h3>
-                <label for="">Masukkan Email</label>
-                <input class="input" type="text" name="nama" placeholder="Masukkan Email" />
-                <label for="">Masukkan Username</label>
-                <input class="input" type="text" name="nama" placeholder="Nama Lengkap" />
-                <label for="">Password</label>
-                <input class="input" type="password" name="password" placeholder="Password" />
-                <button class="button" type="submit">daftar</button>
+            <div class="jumbotron">
+                <div class="jumbotron-text">
+                    <h1>Welcome TO FShop</h1>
+                    <p>BELANJA BUAH DENGAN MUDAH, HEMAT, DAN BERKUALITAS</p>
+                    <button type="submit" ></a>daftar</button>
+                </div>
+                <img class="jumbotron-img" src="foto/etalase (1).jpg" alt="">
             </div>
         </main>
-    </center>
+    </div>
 </body>
+
 </html>
