--- a/admin.html
+++ b/admin.html
@@ -56,6 +56,8 @@
         </nav>
         <div class="home-content">
             <h1>Selamat Datang Admin</h1>
+                <h2 id="text"></h2>
+                <h3 id="date"></h3>
         </div>
     </section>
     <script>
@@ -66,6 +68,7 @@
             if (sidebar.classList.contains("active")) {
                 sidebarBtn.classList.replace("bx-menu", "bx-menu-alt-right");
             } else sidebarBtn.classList.replace("bx-menu-alt-right", "bx-menu");
+        
         };
     </script>
 </body>
